tests/rosetta/out/Haskell/amicable-pairs.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/amicable-pairs.hs:119:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/amicable-pairs.hs:114:1
                 /workspace/mochi/tests/rosetta/out/Haskell/amicable-pairs.hs:119:1
    |
119 | main = do
    | ^^^^
